# RTC_Frameworker

./: .gitignore
certification/: privatekey.pem
conf/: framework.conf
log/: signaling.INFO  signaling.log.INFO.20240813-185554.25371  signaling.log.INFO.20240813-220412.29228  signaling.log.INFO.20240813-222355.31809  signaling.log.INFO.20240814-190654.52726  signaling.log.INFO.20240817-184807.106041  signaling.log.INFO.20240817-185903.106986  signaling.log.INFO.20240817-190332.107539  signaling.log.INFO.20240817-190432.107886  signaling.log.signaling.%!d(string=INFO)202408-131744.12%!(EXTRA int=23442)  signaling.log.signaling.%!d(string=INFO)202408-131745.13%!(EXTRA int=23603)  signaling.log.signaling.%!d(string=INFO)202408-131747.56%!(EXTRA int=23789)  signaling.log.signaling.%!d(string=INFO)202408-131748.2%!(EXTRA int=24034)
src/: main.go  router.go
xrtcserver/rtcserver/: CMakeLists.txt  build.sh
xrtcserver/rtcserver/conf/: general.yaml  signaling_server.yaml
xrtcserver/rtcserver/src/: main.cpp  xrtcserver_def.hpp
xrtcserver/rtcserver/src/base/: Lock_Free_Queue.hpp  conf.cpp  conf.hpp  event_loop.cpp  event_loop.hpp  log.cpp  log.hpp  socket.cpp  socket.hpp  xhead.hpp
xrtcserver/rtcserver/src/server/: rtc_server.cpp  rtc_server.hpp  rtc_worker.cpp  rtc_worker.hpp  signaling_server.cpp  signaling_server.hpp  signaling_worker.cpp  signaling_worker.hpp  tcp_connection.cpp  tcp_connection.hpp
xrtcserver/rtcserver/src/signaling/: signaling_server.cpp  signaling_server.hpp  signaling_worker.cpp  signaling_worker.hpp  tcp_connection.cpp  tcp_connection.hpp
(+48 files in other folders)
